# elm-eureka

./: .gitignore  Cargo.toml  README.md  TODO  elm-bnf.txt  verify-parser.sh
examples/: diff-jutsu-lexer.sh  display_parser.rs  fetch-elm-spa.sh  fetch-examples.sh  graphizdeps.rs  lexdelex.rs  listmodules.rs  listsources.rs  listtypes.rs  parseonefile.rs  small-example.sh  small_indent_test.elm  typelisttest.elm
src/: ast.rs  elm_lexer.rs  elm_parse.lalrpop  elm_parser.rs  elm_versions.rs  lexer-test.rs  lexer.rs  lib.rs  packages_reader.rs  parse_packages.rs  parser.rs  position.rs  tokens.rs
src/parser/: filter_indent.rs  grammar.lalrpop  mod.rs  streamed.rs  test.rs  tree-display.rs  tree.rs
src/parser/elm_samples/: no_head.elm  odd_exprs.elm  small_file_test.elm  unordered_list.elm
src/unsugar/: convert-test.rs  convert.rs  elmscope.rs  errors.rs  interner.rs  mod.rs  scopedname-test.rs  scopedname.rs
