[package]
name = "elm-eureka"
description = "A parser for the elm programming language"
keywords = ["parser","elm","programming language"]
version = "0.1.0"
authors = ["Nicola Papale"]
build = "build.rs"
repository = "https://github.com/nicopap/elm-eureka"
readme = "README.md"
categories = ["parser-implementations", "text-processing"]
license = "LGPL3"

[build-dependencies]
lalrpop = "0.14.0"

[dependencies]
serde_json = "1.0"
lalrpop-util = "0.14.0"
itertools = "0.7.6"
walkdir = "2"

[dev-dependencies]
pretty_assertions = "0.4.0"
